fixed margin on mobile for course badge

--- a/app/assets/stylesheets/components/course-badge.scss
+++ b/app/assets/stylesheets/components/course-badge.scss
@@ -2,4 +2,22 @@
   @include box-shadow(0 5px 16px 0 rgba(0, 0, 0, 0.1));
   @include border-radius(50%);
   padding: 10px;
+
+  @include  media-breakpoint-down(sm) {
+    margin-bottom: 1em;
+  }
+
+  &__image {
+    width: 100px;
+    height: 100px;
+
+    @include media-breakpoint-down(md) {
+      width: 80px;
+      height: 80px;
+    }
+
+    @include  media-breakpoint-down(sm) {
+      margin-left: 0;
+    }
+  }
 }
