--- a/app/assets/stylesheets/components/courses.scss
+++ b/app/assets/stylesheets/components/courses.scss
@@ -57,16 +57,6 @@
         display: flex;
         padding: 0;
 
-        .course-badge-img {
-          width: 100px;
-          height: 100px;
-
-          @include media-breakpoint-down(md) {
-            width: 80px;
-            height: 80px;
-          }
-        }
-
         .course-title {
           margin-left: 2em;
 
@@ -92,10 +82,6 @@
           text-align: center;
           .course-title {
             margin-left: 0;
-          }
-          .course-badge-img {
-            margin-left: 0;
-            margin-bottom: 1em;
           }
         }
       }
